--- a/backend/server/vercel.json
+++ b/backend/server/vercel.json
@@ -1,16 +1,5 @@
 {
   "version": 2,
   "builds": [{ "src": "./index.js", "use": "@vercel/node" }],
-
-  "headers": [
-    {
-      "source": "/(.*)",
-      "headers": [
-        {
-          "key": "access-control-allow-origin",
-          "value": "*"
-        }
-      ]
-    }
-  ]
+  "routes": [{ "src": "/(.*)", "dest": "/" }]
 }
