--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-hook-form": "^7.49.2",
     "react-horizontal-scrolling-menu": "^4.0.1",
     "react-i18next": "^12.3.1",
     "react-paginate": "^8.1.4",
