--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "i18next-http-backend": "^2.2.1",
     "js-cookie": "^3.0.1",
     "react": "^18.2.0",
+    "react-datepicker": "^4.25.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.49.2",
