--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "i18next-browser-languagedetector": "^7.1.0",
     "i18next-http-backend": "^2.2.1",
     "js-cookie": "^3.0.1",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-datepicker": "^4.25.0",
     "react-dom": "^18.2.0",
