--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
     "i18next-http-backend": "^2.2.1",
     "js-cookie": "^3.0.5",
     "moment": "^2.30.1",
+    "number-to-text": "^0.3.9",
     "react": "^18.2.0",
     "react-datepicker": "^4.25.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
-    "react-hook-form": "^7.49.2",
+    "react-hook-form": "^7.53.2",
     "react-horizontal-scrolling-menu": "^4.0.1",
     "react-i18next": "^12.3.1",
     "react-json-to-csv": "^1.2.0",
