--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "moment": "^2.30.1",
     "number-to-text": "^0.3.9",
     "react": "^18.2.0",
+    "react-contextmenu": "^2.14.0",
     "react-datepicker": "^4.25.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
@@ -24,10 +25,12 @@
     "react-i18next": "^12.3.1",
     "react-json-to-csv": "^1.2.0",
     "react-paginate": "^8.1.4",
+    "react-router": "^7.1.1",
     "react-router-dom": "^6.21.2",
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
     "react-toastify": "^9.1.3",
+    "swiper": "^11.2.1",
     "uuid": "^9.0.1",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5"
