--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "i18next-browser-languagedetector": "^7.1.0",
     "i18next-http-backend": "^2.2.1",
     "js-cookie": "^3.0.5",
-    "moment": "^2.30.1",
     "number-to-text": "^0.3.9",
     "react": "^18.2.0",
     "react-contextmenu": "^2.14.0",
@@ -27,7 +26,7 @@
     "react-paginate": "^8.1.4",
     "react-router": "^7.1.1",
     "react-router-dom": "^6.21.2",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-select": "^5.8.0",
     "react-toastify": "^9.1.3",
     "swiper": "^11.2.1",
