--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-scripts": "^5.0.1",
     "react-select": "^5.8.0",
     "react-toastify": "^9.1.3",
+    "recharts": "^2.15.1",
     "swiper": "^11.2.1",
     "uuid": "^9.0.1",
     "web-vitals": "^2.1.4",
