--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@hookform/resolvers": "^4.1.2",
     "@tanstack/react-query": "^5.25.0",
     "@tanstack/react-table": "^8.11.2",
     "@testing-library/jest-dom": "^5.16.5",
@@ -33,7 +34,8 @@
     "swiper": "^11.2.1",
     "uuid": "^9.0.1",
     "web-vitals": "^2.1.4",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "zod": "^3.24.2"
   },
   "scripts": {
     "start": "react-scripts start",
